test/compile-fail/scope/use-global-crate/top.rhdl
mod a {
    use ::crate::a;
}
